--- a/Xela_api_pariss/appsettings.json
+++ b/Xela_api_pariss/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server= 5CD746D1P5\\SQLEXPRESS;Database= aplicacionesNet;Integrated Security=True",
+  // "DefaultConnection": "Server= 5CD746D1P5\\SQLEXPRESS;Database= aplicacionesNet;Integrated Security=True",
     //"DefaultConnection": "Server=5CD746D1P5\\SQLEXPRESS;Database=aplicacionesNet;Trusted_Connection=false;User ID=apixela;Password=Desarrollo05",
     "QueryTimeoutSeconds": "55"
   },
